cmd/gameserverapi/ingress-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thundernetes-gameserverapi-ingress
  namespace: thundernetes-system
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "thundernetes-system/tls-certs"
spec:
  ingressClassName: nginx
  tls:
  - secretName: tls-certs
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thundernetes-gameserverapi
            port:
              number: 5001
